--- a/front/index.html
+++ b/front/index.html
@@ -45,8 +45,8 @@
             <form class="form-inline" action="">
                 <input class="form-control" placeholder="Pesquisar..." type="text">
                 <button class="btn btn-outline-light">Pesquisar</button>
-
-                <button>Cadastrar</button>
+                <button class="btn btn-dark btn-sm">Cadastrar</button>
+                <button class="btn btn-dark btn-sm">Login</button>
             </form>
         </div>
     </nav>
