aplicando padding entre os botões de pesquisa e cadastro

--- a/front/index.html
+++ b/front/index.html
@@ -45,6 +45,7 @@
             <form class="form-inline" action="">
                 <input class="form-control" placeholder="Pesquisar..." type="text">
                 <button class="btn btn-outline-light">Pesquisar</button>
+                <span class="pl-2"></span>
                 <button class="btn btn-dark btn-sm">Cadastrar</button>
                 <button class="btn btn-dark btn-sm">Login</button>
             </form>
