--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="visual.css">
+
     <title>Tenno</title>
   </head>
   <body>
@@ -51,6 +53,20 @@
             </form>
         </div>
     </nav>
+
+    <!--Categorias-->
+    <div class="list-group" style="width: 190px; height: auto; margin: 10px; font-size: 14px;">
+        <a style="text-align: center; padding: 10px;" class="list-group-item list-group-item-dark list-group-item-action active" href="">Todas as Categorias</a>
+        <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action" href="">Imóveis</a>
+        <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action" href="">Eletrônicos</a>
+        <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action" href="">Serviços</a>
+        <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action" href="">Esporte</a>
+    </div>
+
+    <!--Tela Principal-->
+    <div>
+      
+    </div>
 
 
   </body>
