adicionando coluna dos produtos e centralizando

--- a/front/index.html
+++ b/front/index.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!--Categorias-->
-    <div class="list-group" style="width: 190px; height: auto; margin: 10px; font-size: 14px;">
+    <div class="list-group" style="float: left; width: 190px; height: auto; margin: 10px; font-size: 14px;">
         <a style="text-align: center; padding: 10px;" class="list-group-item list-group-item-dark list-group-item-action active" href="">Todas as Categorias</a>
         <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action" href="">Imóveis</a>
         <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action" href="">Eletrônicos</a>
@@ -64,8 +64,64 @@
     </div>
 
     <!--Tela Principal-->
-    <div>
-      
+    <div style="margin: 10px;">
+      <div class="card-columns" style="width: 900px;">
+        <div class="card" style="padding: 5px;">
+          <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Produto</h4>
+            <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+            <a class="btn btn-dark" href="">Acessar</a>
+          </div>
+        </div>
+
+        <div class="card" style="padding: 5px;">
+          <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Produto</h4>
+            <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+            <a class="btn btn-dark" href="">Acessar</a>
+          </div>
+        </div>
+
+        <div class="card" style="padding: 5px;">
+          <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Produto</h4>
+            <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+            <a class="btn btn-dark" href="">Acessar</a>
+          </div>
+        </div>
+
+        <div class="card" style="padding: 5px;">
+          <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Produto</h4>
+            <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+            <a class="btn btn-dark" href="">Acessar</a>
+          </div>
+        </div>
+
+        <div class="card" style="padding: 5px;">
+          <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Produto</h4>
+            <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+            <a class="btn btn-dark" href="">Acessar</a>
+          </div>
+        </div>
+
+        <div class="card" style="padding: 5px;">
+          <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Produto</h4>
+            <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+            <a class="btn btn-dark" href="">Acessar</a>
+          </div>
+        </div>
+        
+      </div>
+
     </div>
 
 
