deixando a aba dos produtos mais responsiva
a div dos produtos é ajustada conforme a resolução do navegador é alterada.

--- a/front/index.html
+++ b/front/index.html
@@ -65,7 +65,7 @@
 
     <!--Tela Principal-->
     <div style="margin: 10px;">
-      <div class="card-columns" style="width: 900px;">
+      <div class="card-columns" style="width: auto;">
         <div class="card" style="padding: 5px;">
           <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
           <div class="card-body">
