Criando tela de login
Tela de login criada e algumas otimizações feitas

--- a/front/index.html
+++ b/front/index.html
@@ -48,8 +48,7 @@
                 <input class="form-control" placeholder="Pesquisar..." type="text">
                 <button class="btn btn-outline-light">Pesquisar</button>
                 <span class="pl-2"></span>
-                <button class="btn btn-dark btn-sm">Cadastrar</button>
-                <button class="btn btn-dark btn-sm">Login</button>
+                <button class="btn btn-dark btn-sm"><a href="login/login.html">Login</a></button>
             </form>
         </div>
     </nav>
