--- a/front/login/login.html
+++ b/front/login/login.html
@@ -48,6 +48,8 @@
             </div>
             <button class="btn btn-dark">Logar</button>
         </form>
+
+        <a href="">Não tem um cadastro ainda? Clique aqui!</a>
     </div>
     
 
