--- a/front/login/login.html
+++ b/front/login/login.html
@@ -46,7 +46,7 @@
                 <input class="form-control" type="password" placeholder="senha" maxlength="16">
                 
             </div>
-            <button class="btn btn-outline-dark">Logar</button>
+            <button class="btn btn-dark">Logar</button>
         </form>
 
         <a href="">Não tem um cadastro ainda? Clique aqui!</a>
