--- a/front/index.html
+++ b/front/index.html
@@ -10,6 +10,9 @@
 
     <link rel="stylesheet" href="visual.css">
 
+    <link rel="shortcut icon" type="image/x-icon" href="login/space2.png">
+    <!--<a href="https://www.flaticon.com/br/icones-gratis/logotipo" title="logotipo ícones">Logotipo ícones criados por Freepik - Flaticon</a>-->
+
     <title>Tenno</title>
   </head>
   <body>
