--- a/front/login/login.html
+++ b/front/login/login.html
@@ -10,6 +10,9 @@
 
     <link rel="stylesheet" href="visualogin.css">
 
+    <link rel="shortcut icon" type="image/x-icon" href="space2.png">
+    <!--<a href="https://www.flaticon.com/br/icones-gratis/logotipo" title="logotipo ícones">Logotipo ícones criados por Freepik - Flaticon</a>-->
+
     <title>Login - Tenno</title>
   </head>
   <body>
