--- a/front/index.html
+++ b/front/index.html
@@ -78,63 +78,64 @@
   </div>
 
   <!--Tela Principal-->
-  <div class="card-columns">
-    <div class="card">
-      <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Produto</h4>
-        <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
-        <a class="btn btn-dark" href="">Acessar</a>
+  <div class="centro">
+    <div class="card-columns">
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
       </div>
-    </div>
-
-    <div class="card">
-      <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Produto</h4>
-        <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
-        <a class="btn btn-dark" href="">Acessar</a>
+  
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
       </div>
-    </div>
-
-    <div class="card">
-      <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Produto</h4>
-        <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
-        <a class="btn btn-dark" href="">Acessar</a>
+  
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
       </div>
-    </div>
-
-    <div class="card">
-      <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Produto</h4>
-        <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
-        <a class="btn btn-dark" href="">Acessar</a>
+  
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
       </div>
-    </div>
-
-    <div class="card">
-      <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Produto</h4>
-        <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
-        <a class="btn btn-dark" href="">Acessar</a>
+  
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
       </div>
-    </div>
-
-    <div class="card">
-      <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Produto</h4>
-        <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
-        <a class="btn btn-dark" href="">Acessar</a>
+  
+      <div class="card">
+        <img class="card-img-top" src="https://source.unsplash.com/random/900x400" alt="">
+        <div class="card-body">
+          <h4 class="card-title">Produto</h4>
+          <h6 style="margin-bottom: 10px;" class="card-subtitle">R$ 600</h6>
+          <a class="btn btn-dark" href="">Acessar</a>
+        </div>
       </div>
     </div>
   </div>
-
-
+  
 </body>
 
 </html>
