--- a/front/index.html
+++ b/front/index.html
@@ -49,7 +49,7 @@
     <!--Navegação-->
     <div class="collapse navbar-collapse" id="nav-opcoes1">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
         <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
       </ul>
@@ -64,17 +64,12 @@
   </nav>
 
   <!--Categorias-->
-  <div class="list-group" style="float: left; width: 190px; height: auto; margin: 10px; font-size: 14px;">
-    <a style="text-align: center; padding: 10px;"
-      class="list-group-item list-group-item-dark list-group-item-action active" href="">Todas as Categorias</a>
-    <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action"
-      href="">Imóveis</a>
-    <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action"
-      href="">Eletrônicos</a>
-    <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action"
-      href="">Serviços</a>
-    <a style="text-align: center; padding: 10px;" class="list-group-item-dark list-group-item-action"
-      href="">Esporte</a>
+  <div class="list-group">
+    <a class="list-group-item list-group-item-dark list-group-item-action active" href="">Todas as Categorias</a>
+    <a class="list-group-item-dark list-group-item-action" href="">Imóveis</a>
+    <a class="list-group-item-dark list-group-item-action" href="">Eletrônicos</a>
+    <a class="list-group-item-dark list-group-item-action" href="">Serviços</a>
+    <a class="list-group-item-dark list-group-item-action" href="">Esporte</a>
   </div>
 
   <!--Tela Principal-->
