login e cadastro melhorias
Otimizando e removendo códigos em utilidade da tela de login e cadastro.

--- a/front/login/cadastro.html
+++ b/front/login/cadastro.html
@@ -34,9 +34,9 @@
         <a class="navbar-brand mx-auto" href="../index.html">Tenno</a>
     </nav>
     
-    <div class="cad sombra">
+    <div class="cad">
         <form class="form-inline" action="">
-            <h2 class="centralize">Cadastre-se</h2>
+            <h2>Cadastre-se</h2>
             <div>
                 <input class="form-control mr-2" type="text" placeholder="Nome" maxlength="20">
                 <input class="form-control" type="text" placeholder="Sobrenome" maxlength="20">
