--- a/front/login/login.html
+++ b/front/login/login.html
@@ -33,14 +33,14 @@
         <a class="navbar-brand mx-auto" href="../index.html">Tenno</a>
     </nav>
     
-    <div class="cad sombra">
+    <div class="log">
         <form class="form-inline" action="">
-            <h2 class="centralize">Login</h2>
+            <h2>Login</h2>
             <div>
-                <input class="form-control pad" type="email" placeholder="E-mail" maxlength="50">
+                <input class="form-control" type="email" placeholder="E-mail" maxlength="50">
             </div>
             <div>
-                <input class="form-control pad" type="password" placeholder="Senha" maxlength="16">
+                <input class="form-control" type="password" placeholder="Senha" maxlength="16">
             </div>
             <button class="btn btn-dark">Login</button>
         </form>
