--- a/front/login/cadastro.html
+++ b/front/login/cadastro.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="visualcadastro.css">
 
-    <link rel="shortcut icon" type="image/x-icon" href="space2.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../login/space2.png">
     <!--<a href="https://www.flaticon.com/br/icones-gratis/logotipo" title="logotipo ícones">Logotipo ícones criados por Freepik - Flaticon</a>-->
 
     <title>Cadastro - Tenno</title>
