--- a/front/categorias/servicos.html
+++ b/front/categorias/servicos.html
@@ -46,7 +46,7 @@
         <!--Navegação-->
         <div class="collapse navbar-collapse" id="nav-opcoes1">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
             </ul>
@@ -55,7 +55,7 @@
                 <input class="form-control" placeholder="Pesquisar..." type="text">
                 <button class="btn btn-outline-light">Pesquisar</button>
                 <span class="pl-2"></span>
-                <button class="btn btn-dark btn-sm"><a href="login/login.html">Login</a></button>
+                <button class="btn btn-dark btn-sm"><a href="../login/login.html">Login</a></button>
             </form>
         </div>
     </nav>
