--- a/front/categorias/imoveis.html
+++ b/front/categorias/imoveis.html
@@ -20,8 +20,12 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
@@ -58,11 +62,14 @@
 
     <!--Categorias-->
     <div class="list-group">
-        <a class="list-group-item list-group-item-dark list-group-item-action" href="../index.html">Todas as Categorias</a>
+        <a class="list-group-item list-group-item-dark list-group-item-action" href="../index.html">Todas as
+            Categorias</a>
         <a class="list-group-item list-group-item-dark list-group-item-action active" href="imoveis.html">Imóveis</a>
         <a class="list-group-item list-group-item-dark list-group-item-action" href="eletronicos.html">Eletrônicos</a>
-        <a class="list-group-item list-group-item-dark list-group-item-action" href="../categorias/servicos.html">Serviços</a>
-        <a class="list-group-item list-group-item-dark list-group-item-action" href="../categorias/esporte.html">Esporte</a>
+        <a class="list-group-item list-group-item-dark list-group-item-action"
+            href="../categorias/servicos.html">Serviços</a>
+        <a class="list-group-item list-group-item-dark list-group-item-action"
+            href="../categorias/esporte.html">Esporte</a>
     </div>
 
 </body>
